added requiredArgsConstructor, removed findAll()